fix some swagger errors
