# app/Http/Controllers/Api/InventoryController.php
@@ -14,7 +14,7 @@ class InventoryController extends Controller
      *      path="/api/inventory",
      *      operationId="getInventory",
      *      tags={"Inventory"},
-     *      summary="Get inventory levels for all products",,
+     *      summary="Get inventory levels for all products",
      *     security={{"bearer_token":{}}},
      *      description="Returns a list of all products along with their inventory levels.",
      *      @OA\Response(
@@ -29,10 +29,7 @@ class InventoryController extends Controller
      *                  @OA\Property(property="inventory_count", type="integer", description="Inventory count")
      *              )
      *          )
-     *      ),
-     *      security={
-     *          {"bearerAuth": {}}
-     *      }
+     *      )
      * )
      * Display a listing of the inventory levels for all products.
      *
@@ -54,7 +51,7 @@ class InventoryController extends Controller
      *     path="/api/inventory/{id}",
      *     summary="Display the inventory level for a specific product.",
      *     description="Returns the inventory level for a product identified by its ID.",
-     *     tags={"Inventory"},,
+     *     tags={"Inventory"},
      *     security={{"bearer_token":{}}},
      *     @OA\Parameter(
      *         name="id",
@@ -84,10 +81,7 @@ class InventoryController extends Controller
      *         @OA\JsonContent(
      *             @OA\Property(property="error", type="string", example="Product not found.")
      *         )
-     *     ),
-     *      security={
-     *          {"bearerAuth": {}}
-     *      }
+     *     )
      * )
      * Display the inventory level for a specific product.
      *
@@ -114,7 +108,7 @@ class InventoryController extends Controller
      *     path="/api/inventory/{id}",
      *     summary="Update the inventory level for a specific product.",
      *     description="Adjusts the inventory level based on the incoming adjustment value and returns the updated product details.",
-     *     tags={"Inventory"},,
+     *     tags={"Inventory"},
      *     security={{"bearer_token":{}}},
      *     @OA\Parameter(
      *         name="id",
@@ -158,10 +152,7 @@ class InventoryController extends Controller
      *         @OA\JsonContent(
      *             @OA\Property(property="error", type="string", example="Product not found.")
      *         )
-     *     ),
-     *      security={
-     *          {"bearerAuth": {}}
-     *      }
+     *     )
      * )
      * 
      * It is convention that the update number received is an adjustment amount, 
@@ -235,7 +226,7 @@ class InventoryController extends Controller
      *      path="/api/products/{id}/reorder-point",
      *      operationId="setReorderPoint",
      *      tags={"Products"},
-     *      summary="Set reorder point for a product",,
+     *      summary="Set reorder point for a product",
      *     security={{"bearer_token":{}}},
      *      description="Set the reorder point for a specific product and trigger notifications if necessary.",
      *      @OA\Parameter(
@@ -267,10 +258,7 @@ class InventoryController extends Controller
      *          @OA\JsonContent(
      *              @OA\Property(property="error", type="string", example="Product not found.")
      *          )
-     *      ),
-     *      security={
-     *          {"bearerAuth": {}}
-     *      }
+     *      )
      * )
      *
      * @param  \Illuminate\Http\Request  $request
